Bug 149261 - Galactic/Equatorial coordinates conversion does not work
Summary: Galactic/Equatorial coordinates conversion does not work
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kstars
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-27 13:30 UTC by R. Kortekaas
Modified: 2007-08-27 16:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description R. Kortekaas 2007-08-27 13:30:53 UTC
Version:           1.2.5 (using KDE 3.5.5, Debian Package 4:3.5.5a.dfsg.1-8 (4.0))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.18-4-486

Tools - Calculator - Celestial coordinates:

All tools work apart from Galactic/Equatorial coordinates conversion. It will allow itself to be selected by mouse, but the form on the right does not change so that no data can be entered.
Comment 1 kstars 2007-08-27 16:10:37 UTC
SVN commit 705228 by harris:

Fixing bug #149261.

I don't know if there will be another 3.5 release, but if you have the
source code, you can fix this very easily:

Open the file kdeedu/kstars/kstars/tools/astrocalc.cpp.  
Search for the word "Cooordinates" and change it to "Coordinates".

This issue doesn't exist in trunk.

BUG: 149261



 M  +1 -1      astrocalc.cpp  


--- branches/KDE/3.5/kdeedu/kstars/kstars/tools/astrocalc.cpp #705227:705228
@@ -115,7 +115,7 @@
 		genCoordText();
 	if(!(election.compare(i18n("Julian Day"))))
 		genJdFrame();
-	if(!(election.compare(i18n("Galactic Cooordinates"))))
+	if(!(election.compare(i18n("Galactic Coordinates"))))
 		genGalFrame();
 	if(!(election.compare(i18n("Precession"))))
 		genPrecFrame();
Comment 2 R. Kortekaas 2007-08-27 16:56:13 UTC
Thanks very much for the prompt reply and diagnosis!
I shall have a go at the suggested edit.

Rudie


>Fixing bug #149261.
> 
> I don't know if there will be another 3.5 release, but 
>if you have the
> source code, you can fix this very easily:
> 
> Open the file kdeedu/kstars/kstars/tools/astrocalc.cpp. 
> 
> Search for the word "Cooordinates" and change it to 
>"Coordinates".
> 
> This issue doesn't exist in trunk.
> 
> BUG: 149261
> 
> 
> 
> M  +1 -1      astrocalc.cpp  
> 
> 
> --- 
>branches/KDE/3.5/kdeedu/kstars/kstars/tools/astrocalc.cpp 
>#705227:705228
> @ -115,7 +115,7  @
> 		genCoordText();
> 	if(!(election.compare(i18n("Julian Day"))))
> 		genJdFrame();
> -	if(!(election.compare(i18n("Galactic Cooordinates"))))
> +	if(!(election.compare(i18n("Galactic Coordinates"))))
> 		genGalFrame();
> 	if(!(election.compare(i18n("Precession"))))
> 		genPrecFrame();