Fixing bug #149261.

I don't know if there will be another 3.5 release, but if you have the
source code, you can fix this very easily:

Open the file kdeedu/kstars/kstars/tools/astrocalc.cpp.  
Search for the word "Cooordinates" and change it to "Coordinates".

This issue doesn't exist in trunk.

BUG: 149261


svn path=/branches/KDE/3.5/kdeedu/kstars/; revision=705228